[tool.poetry]
name = "memorycanvas"
version = "0.1.0"
description = ""
authors = ["Sangjoon Han <jphan32@me.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gradio = "^4.37.2"
openai = "^1.35.10"
google-generativeai = "^0.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
